added html basics

--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
     <div class="container" id="header">
         <h1>Welcome to the world of HTML5</h1>
         <button class="btn btn-primary">click Me</button>
+        <hr>
+        <span id="message-one">Welcome to Span One</span> <br>
+        <span class="message-two">Welcome to Span Two</span> <br>
+        <SPAN class="message-two">Welcome to Span Three</SPAN>
     </div>
     <script>
         console.log('Hello From JS')
         console.log(document.getElementById("header"))
+        console.log(document.getElementsByClassName("message-two"))
     </script>
 </body>
 </html>
+<!-- <h1>This should be outside the body section</h1> -->
