added forms and DOM

--- a/8.html-forms/form.html
+++ b/8.html-forms/form.html
@@ -62,7 +62,14 @@
             </div>
             <br>
             <div>
+                <input type="hidden" value="30">
+            </div>
+
+            <div>
                 <button class="btn btn-primary">Submit</button>
+                <input class="btn btn-warning" type="button" value="Click Me">
+                <input type="submit" class="btn btn-success" value="Submit Again">
+                <input type="image" src="../images/bear/favicon-16x16.png" alt="Bear Image">
             </div>
         </form>
     </div>
